--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<h2>About Me</h2>
 										<p>Hello! My name is Alex Bush. I'm a third year Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
 									</header>
-									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is Game Design and Development. Outside of school, I enjoy collecting manga (I'm currently working on collecting all of the <em>Jojo's Bizarre Adventure</em> series), building model sets and exercising!</p>
+									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest, needless to say, is Game Design and Development. Outside of school, I enjoy collecting manga(I'm currently working on collecting all of the <em>Jojo's Bizarre Adventure</em> series), building model sets and exercising!</p>
 									<p>Below is a list of some of my various technical skills and projects. During my time at UTSA, I've gotten to work on projects in a variety of disciplines, including game design, software development and AI. I hope you find my completed and ongoing projects intriguing!</p>
 								</div>
 							</section>
@@ -58,7 +58,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Proficient in C, Java, Python and LaTeX</li>
 										<li class="icon solid fa-code">Experience working with Unity, Gamemaker Studio 2 and C# scripting</li>
-										<li class="icon solid fa-code">Moderate experience with C++, LISP and Bash</li>
+										<li class="icon solid fa-code">Moderate experience wiht C++, LISP and Bash</li>
 									</ul>
 								</div>
 							</section>
@@ -79,8 +79,22 @@
 										<article>
 											<a href="#" class="image"><img src="images/ProjectTitan.PNG" alt="" /></a>
 											<div class="inner">
-												<h4>The Titan Project</h4>
-												<p>ONGOING: In collaboration with other students at UTSA, I have been working on developing 2D "metroidvania"-style platformer in GameMaker Studio 2. See the repository for this project <a href="https://github.com/ABBush2001/The-Titan-Project">here.</a></p>
+												<h4>The Exodus Project</h4>
+												<p>ONGOING: In collaboration with other students at UTSA, I have been working on developing a 2D "metroidvania"-style platformer game. Originally in GameMaker Studio 2, we have recently switched to start developing in Unity. See the repository for this project <a href="https://github.com/JustIccy/Project-Exodus">here.</a></p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/mouse.png" alt="" /></a>
+											<div class="inner">
+												<h4>User Interfaces "Clicker Game" project</h4>
+												<p>UPCOMING: Over the course of this semester(Spring 2022), I will be working with other students in my User Interfaces course to develop a simple clicker game in Unity, with special focus being given to the UI/UX experience. See the repository for this project <a href="https://github.com/ViswaB/UI-game_project">here.</a></p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/e-commerce.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Software Engineering Website Project</h4>
+												<p>UPCOMING: Over the course of this semester(Spring 2022), I will be working with other students in my Software Engineering course to develop an e-commerce website, utilizing SQL, PHP, Javascript, HTML and CSS in our approach. I will be serving as project manager, utilzing Scrum in order to make sure our project is finished quickly and efficiently. See the repository for this project <a href="https://github.com/ABBush2001/CS3773_001-Final-Project">here.</a></p>
 											</div>
 										</article>
 										<article>
