--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Alex Bush Portfolio Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,9 +44,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Hello! My name is Alex Bush. I'm a third year Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
+										<p>Hello! My name is Alex Bush. I'm a Senior Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
 									</header>
-									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest, needless to say, is Game Design and Development. Outside of school, I enjoy collecting manga(I'm currently working on collecting all of the <em>Jojo's Bizarre Adventure</em> series), building model sets and exercising!</p>
+									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is Game Design and Development. Outside of school, I enjoy collecting manga(I'm currently working on collecting all of the <em>Jojo's Bizarre Adventure</em> series), building model sets and exercising!</p>
 									<p>Below is a list of some of my various technical skills and projects. During my time at UTSA, I've gotten to work on projects in a variety of disciplines, including game design, software development and AI. I hope you find my completed and ongoing projects intriguing!</p>
 								</div>
 							</section>
@@ -56,8 +56,8 @@
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Proficient in C, Java, Python and LaTeX</li>
-										<li class="icon solid fa-code">Experience working with Unity, Gamemaker Studio 2 and C# scripting</li>
+										<li class="icon solid fa-code">Proficient in C#, Unity, C, Java, Python and LaTeX</li>
+										<li class="icon solid fa-code">Experience working with Gamemaker Studio 2</li>
 										<li class="icon solid fa-code">Moderate experience wiht C++, LISP and Bash</li>
 									</ul>
 								</div>
@@ -70,31 +70,31 @@
 									<p>I've worked on a variety of topics in various disciplines, including AI, Robotics and Game Development.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/SELENAVR.PNG" alt="" /></a>
+											<div class="inner">
+												<h4>SELENA VR</h4>
+												<p>ONGOING: As an intern at non-profit Resilience Inc, I've worked as a Unity developer on SELENA VR, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Cyber Threat Protector</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Largely self-led, this project has so far taught me a lot about how a game project is planned, and has bolstered my proficiency with the Unity game engine. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
+												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of Cyber Threat Protectors complete by the end of August 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ProjectTitan.PNG" alt="" /></a>
+											<a href="#" class="image"><img src="images/UIProject.PNG" alt="" /></a>
 											<div class="inner">
-												<h4>The Exodus Project</h4>
-												<p>ONGOING: In collaboration with other students at UTSA, I have been working on developing a 2D "metroidvania"-style platformer game. Originally in GameMaker Studio 2, we have recently switched to start developing in Unity. See the repository for this project <a href="https://github.com/JustIccy/Project-Exodus">here.</a></p>
+												<h4>10 Seconds To Mars</h4>
+												<p>Over the course of the Spring 2022 semester, I worked with other students in my User Interfaces course to develop a Unity clicker game, with special focus being given to the UI/UX experience. See a video demonstration of this project <a href="https://www.youtube.com/watch?v=GfpR_mkCEUU">here.</a></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/mouse.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/ArtCentral.png" alt="" /></a>
 											<div class="inner">
-												<h4>User Interfaces "Clicker Game" project</h4>
-												<p>UPCOMING: Over the course of this semester(Spring 2022), I will be working with other students in my User Interfaces course to develop a simple clicker game in Unity, with special focus being given to the UI/UX experience. See the repository for this project <a href="https://github.com/ViswaB/UI-game_project">here.</a></p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/e-commerce.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Software Engineering Website Project</h4>
-												<p>UPCOMING: Over the course of this semester(Spring 2022), I will be working with other students in my Software Engineering course to develop an e-commerce website, utilizing SQL, PHP, Javascript, HTML and CSS in our approach. I will be serving as project manager, utilzing Scrum in order to make sure our project is finished quickly and efficiently. See the repository for this project <a href="https://github.com/ABBush2001/CS3773_001-Final-Project">here.</a></p>
+												<h4>Art Central: For All Your Needs In Art!</h4>
+												<p>Over the course of the Spring 2022 semester, I worked with other students in my Software Engineering course to develop an e-commerce website, utilizing SQL, PHP, Javascript, HTML and CSS in our approach. I served as project manager, utilzing Scrum in order to make sure our project was finished quickly and efficiently. See the repository for this project <a href="https://github.com/ABBush2001/CS3773_001-Final-Project">here.</a></p>
 											</div>
 										</article>
 										<article>
