--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Cyber Threat Protector</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of Cyber Threat Protectors complete by the end of August 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
+												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of Cyber Threat Protectors complete by the end of Fall 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/UIProject.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>10 Seconds To Mars</h4>
-												<p>Over the course of the Spring 2022 semester, I worked with other students in my User Interfaces course to develop a Unity clicker game, with special focus being given to the UI/UX experience. See a video demonstration of this project <a href="https://www.youtube.com/watch?v=GfpR_mkCEUU">here.</a></p>
+												<p>Over the course of the Spring 2022 semester, I worked with other students in my User Interfaces course to develop a Unity clicker game, with special focus being given to the UI/UX experience. See the repository for this project <a href="https://github.com/ViswaB/UI-game_project">here.</a></p>
 											</div>
 										</article>
 										<article>
