--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 									<p>I've worked on a variety of topics in various disciplines, including AI, Robotics and Game Development.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/SAVEXCAMEE.png"></a>
+											<div class="inner">
+												<h4>SAVE X CAMEE Project</h4>
+												<p>ONGOING: As a research assistant for Dr. John Quarles, I have been working with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, we are developing a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I have primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/SELENAVR.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>SELENA VR</h4>
@@ -79,7 +86,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
-												<h4>Cyber Threat Protector</h4>
+												<h4>Cyber Threat Protectors</h4>
 												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of Cyber Threat Protectors complete by the end of Fall 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
