--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Proficient in C#, Unity, C, Java, Python and LaTeX</li>
+										<li class="icon solid fa-code">Proficient in C++, C#, Unity, C, Java, Python and LaTeX</li>
 										<li class="icon solid fa-code">Experience working with Gamemaker Studio 2</li>
-										<li class="icon solid fa-code">Moderate experience wiht C++, LISP and Bash</li>
+										<li class="icon solid fa-code">Moderate experience with LISP and Bash</li>
 									</ul>
 								</div>
 							</section>
@@ -69,6 +69,13 @@
 									<h3>Projects</h3>
 									<p>I've worked on a variety of topics in various disciplines, including AI, Robotics and Game Development.</p>
 									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/RTS-Nodes.png"></a>
+											<div class="inner">
+												<h4>RTS-Nodes</h4>
+												<p>Developed in C++ and Python, this project presents a generic Real Time Strategy(RTS) game inventory management system, using C++ STL Containers to manage an inventory of items, and Python's Tkinter library to create a GUI through which users can interact with said inventory. See the repository for this project <a href="https://github.com/ABBush2001/RTS-Nodes">here.</a></p>
+											</div>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/SAVEXCAMEE.png"></a>
 											<div class="inner">
