--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 									<p>I've worked on a variety of topics in various disciplines, including AI, Robotics and Game Development.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/BST.png"></a>
+											<div class="inner">
+												<h4>Data Structures and Algorithms</h4>
+												<p>Throughout my undergraduate career, I've completed various projects implementing and designing different data structures and algorithms, including heapsort, binary search trees, the knapsack problem and more. A link to a repository containing these projects can be found <a href="https://github.com/ABBush2001/Projects">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/RTS-Nodes.png"></a>
 											<div class="inner">
 												<h4>RTS-Nodes</h4>
