--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<h2>About Me</h2>
 										<p>Hello! My name is Alex Bush. I'm a Senior Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
 									</header>
-									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is Game Design and Development. Outside of school, I enjoy collecting manga(I'm currently working on collecting all of the <em>Jojo's Bizarre Adventure</em> series), building model sets and exercising!</p>
+									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Game Design and Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and exercising!</p>
 									<p>Below is a list of some of my various technical skills and projects. During my time at UTSA, I've gotten to work on projects in a variety of disciplines, including game design, software development and AI. I hope you find my completed and ongoing projects intriguing!</p>
 								</div>
 							</section>
@@ -77,6 +77,13 @@
 											</div>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/descent.png"></a>
+											<div class="inner">
+												<h4>The Descent</h4>
+												<p>Made as a submission to the <i>Spooky 2D Jam 2022</i> 48 hour game jam, this 2D Unity horror game has players navigate a submarine on its descent into the depths of the sea. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/SpookyJam2022">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/RTS-Nodes.png"></a>
 											<div class="inner">
 												<h4>RTS-Nodes</h4>
@@ -94,14 +101,14 @@
 											<a href="#" class="image"><img src="images/SELENAVR.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>SELENA VR</h4>
-												<p>ONGOING: As an intern at non-profit Resilience Inc, I've worked as a Unity developer on SELENA VR, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
+												<p>ONGOING: As an intern at non-profit Resilience Inc, I've worked as a Unity developer on <i>SELENA VR</i>, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Cyber Threat Protectors</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of Cyber Threat Protectors complete by the end of Fall 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
+												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Fall 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
 										<article>
@@ -129,7 +136,7 @@
 											<a href="#" class="image"><img src="images/Nintendo.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Ninten-Do: Desktop checklist application</h4>
-												<p>Developed in Java as part of UTSA's Application Programming Course, Ninten-Do is a desktop application that helps users manage various daily tasks in a fun, game-like style. Users can acquire "points," defeat "bosses" and increase their "level" by completing various tasks. As part of the group, my responsibilities included developing the "Stats" screen, in which users could view information about their account, as well as developing the UML diagram that represented the application. See the repository for this project <a href="https://github.com/thousandSun/Ninten-Do">here.</a></p>
+												<p>Developed in Java as part of UTSA's Application Programming Course, <i>Ninten-Do</i> is a desktop application that helps users manage various daily tasks in a fun, game-like style. Users can acquire "points," defeat "bosses" and increase their "level" by completing various tasks. As part of the group, my responsibilities included developing the "Stats" screen, in which users could view information about their account, as well as developing the UML diagram that represented the application. See the repository for this project <a href="https://github.com/thousandSun/Ninten-Do">here.</a></p>
 											</div>
 										</article>
 									</div>
