--- a/index.html
+++ b/index.html
@@ -77,10 +77,24 @@
 											</div>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/BossRush.PNG"></a>
+											<div class="inner">
+												<h4>Boss Rush</h4>
+												<p>Made as a submission to the <i>7DFPS</i> week-long game jam, this Unity game takes on the style of a classic doom-style shooter, as players assume the role of an office worker completeing tasks to quell the rage of their angry boss. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/7DFPS">here.</a></p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/CookieCrumble.PNG"></a>
+											<div class="inner">
+												<h4>Cookie Crumble!</h4>
+												<p>placing in the top 10% of games for innovation out of 562 entries in the Github <i>Game Off 2022</i> month-long game jam, this Unity game mixes 2D and 3D environments as players play through a cutesy series of mini-games that are more than what they seem. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/SpookyJam2022">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/descent.png"></a>
 											<div class="inner">
 												<h4>The Descent</h4>
-												<p>Made as a submission to the <i>Spooky 2D Jam 2022</i> 48 hour game jam, this 2D Unity horror game has players navigate a submarine on its descent into the depths of the sea. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/SpookyJam2022">here.</a></p>
+												<p>Placing 3rd for audio design, 5th for theme adherence and 8th overall out of 60 entries to the <i>Spooky 2D Jam 2022</i> 48 hour game jam, this 2D Unity horror game has players navigate a submarine on its descent into the depths of the sea. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/SpookyJam2022">here.</a></p>
 											</div>
 										</article>
 										<article>
@@ -94,21 +108,21 @@
 											<a href="#" class="image"><img src="images/SAVEXCAMEE.png"></a>
 											<div class="inner">
 												<h4>SAVE X CAMEE Project</h4>
-												<p>ONGOING: As a research assistant for Dr. John Quarles, I have been working with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, we are developing a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I have primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
+												<p>As a research assistant for Dr. John Quarles, I worked with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, I helped develop a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/SELENAVR.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>SELENA VR</h4>
-												<p>ONGOING: As an intern at non-profit Resilience Inc, I've worked as a Unity developer on <i>SELENA VR</i>, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
+												<p>As an intern at non-profit Resilience Inc, I worked as a Unity developer on <i>SELENA VR</i>, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Cyber Threat Protectors</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Fall 2022. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
+												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Spring 2023. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
 										<article>
@@ -147,7 +161,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>I'm always looking for opportunities and I'd love to hear from you! If you're interested in contacting me, you can always reach me at my university email, alex.bush@my.utsa.edu.</p>
+									<p>I'm always looking for opportunities and I'd love to hear from you! If you're interested in contacting me, you can always reach me at my university email, alex.bush@my.utsa.edu, or my personal email, alexbush2001@yahoo.com.</p>
 								</div>
 							</section>
 
