--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 											<a href="#" class="image"><img src="images/SAVEXCAMEE.png"></a>
 											<div class="inner">
 												<h4>SAVE X CAMEE Project</h4>
-												<p>As a research assistant for Dr. John Quarles, I worked with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, I helped develop a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
+												<p>As a research assistant for Dr. John Quarles, I worked with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, I helped develop a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work (and to play it!) can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
 											</div>
 										</article>
 										<article>
@@ -122,7 +122,7 @@
 											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>Cyber Threat Protectors</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Spring 2023. See the repository for this project <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
+												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Spring 2023. See the repository for this project and a link to play the current alpha release <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
 											</div>
 										</article>
 										<article>
