--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 											</div>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/Descent.png"></a>
+											<div class="inner">
+												<h4>The Descent 3D</h4>
+												<p>Made as an entry to the 2023 <i>Rowdyhacks</i> 24-hour hackathon, this 3D remake of my previous title <i>The Descent</i> Reimagines the ocean horror game in the style of a creepy, low-poly adventure. Developed in Unity's Universal Render Pipeline and utilizing the LeanTween, Cinemachine and Ink Integration libraries, A link to a repository containing this project (with a link to play the title!) can be found <a href="https://github.com/akon117/TheDescent3D">here.</a></p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/BossRush.PNG"></a>
 											<div class="inner">
 												<h4>Boss Rush</h4>
